2005-11-02  Angus Leeming  <leeming@lyx.org>

	* Bidi.C:
	* lyxtextclass.C: trivial fixes to some MSVS warnings.

2005-10-28  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text3.C (getStatus): re-enable disabled code. (bug 2081)

	* BranchList.h (empty): constify.

2005-10-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text3.C (getStatus): 
	* MenuBackend.C (expandBranches): take the branch list from the
	master document (bug 2092).
	
	* MenuBackend.C (expandBranches): 
	* bufferparams.C (writeFile): use BranchList type.

2005-10-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text3.C (dispatch, getStatus): 
	* LyXAction.C (init): 
	* lfuns.h: get rid of LFUN_KEYMAP_TOGGLE

2005-10-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* toc.C (getTocList): skip paragraphs which toclevel is NOT_IN_TOC.

2005-10-25  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text.C (insertChar): do not reset boundary (bug 2061)

2005-10-24  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* dociterator.C (updateInsets): new method. Updates the inset_
	cache of all the slices of the iterator.

	* text2.C (deleteEmptyParagraphMechanism): compare also containing
	insets when comparing pit/pos; pass the right cursor to
	recordUndo; when a paragraph has been deleted, compare `old.top()' to
	the right cursor slice of `cur'; use updateInsets on cur to make
	sure that the inset caches are correct; general cleanup.

2005-10-21  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text3.C (dispatch): LFUN_NEXT_INSET_TOGGLE: first try to
	dispatch LFUN_INSET_TOGGLE to inset at cursor, and then to
	containg inset. If this does not work, the same command will be
	sent to other insets down the queue by LCursor::dispatch. (bug 2066)

	* lyxfunc.C (dispatch): make sure the cursor is correct when doing
	a dispatch.

2005-10-20  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* lyxtextclass.C (Read): convert layout file if the format is wrong
	* lyxtextclass.C (layout2layout): new, needed for the above
