@@ -1,3 +1,7 @@
+2005-11-03  Michael Gerz  <michael.gerz@teststep.org>
+
+	* messages.C: fix crash and localization on MinGW/Windows platform
+
 2005-11-02  Angus Leeming  <leeming@lyx.org>
 
 	* Bidi.C:
